--- a/GUMAD_CTF/CTF/templates/CTF/base.html
+++ b/GUMAD_CTF/CTF/templates/CTF/base.html
@@ -3,7 +3,9 @@
   <title>CTF | GU MAD</title>
 </head>
 <body style="background-color:gray">
-  {% block content %}
+    <div style="width=400px; background-color:white">
+    {% block content %}
 
-	{% endblock %}
+    {% endblock %}
+    </div>
 </body>
