--- a/GUMAD_CTF/CTF/templates/CTF/index.html
+++ b/GUMAD_CTF/CTF/templates/CTF/index.html
@@ -2,7 +2,14 @@
 
 {% block content %}
 
-<h1>Welcome!</h1>
-<p>This is the home page for the GU MAD CTF 2019!</p>
+<h1>Welcome to the GU MAD CTF 2019!</h1>
+<p>We are super hyped that you are interested in computer security and
+contributing to a learning environment that will benefit us all, and it gives
+us great pleasure to be hosting this event! We have a variety of challenges
+prepared, as well as attack-and-defend competition and Hacker's Jeopardy!</p>
+
+<p>To register, please go <a href="/register">here</a> and add your team! You
+    may register with up to three members, or five if two of your team are
+    underclassmen.</p>
 
 {% endblock %}
