--- a/GUMAD_CTF/CTF/templates/CTF/index.html
+++ b/GUMAD_CTF/CTF/templates/CTF/index.html
@@ -4,12 +4,12 @@
 
 <h1>Welcome to the GU MAD CTF 2019!</h1>
 <p>We are super hyped that you are interested in computer security and
-contributing to a learning environment that will benefit us all, and it gives
-us great pleasure to be hosting this event! We have a variety of challenges
-prepared, as well as attack-and-defend competition and Hacker's Jeopardy!</p>
+contributing to a learning environment that will benefit us all. It gives
+us great pleasure to be hosting this event! We've prepared a variety of challenges,
+including an attack-and-defend competition and Hacker's Jeopardy.</p>
 
-<p>To register, please go <a href="/register">here</a> and add your team! You
-    may register with up to three members, or five if two of your team are
-    underclassmen.</p>
+<p>To register, please go <a href="/register">here</a> and add your team. You
+    may register with up to three members, or five if two of your team members
+    are underclassmen.</p>
 
 {% endblock %}
