Added registration views

--- a/GUMAD_CTF/CTF/templates/CTF/index.html
+++ b/GUMAD_CTF/CTF/templates/CTF/index.html
@@ -2,13 +2,14 @@
 
 {% block content %}
 
-<h1>Welcome to the GU MAD CTF 2019!</h1>
-<p>We are super hyped that you are interested in computer security and
+<h1>Welcome to the Spokane Mayor's Cyber Cup 2019!</h1>
+<p>We at Gonzaga University's Makers and Developers (GU MAD) club are super hyped
+that you are interested in computer security and
 contributing to a learning environment that will benefit us all. It gives
 us great pleasure to be hosting this event! We've prepared a variety of challenges,
 including an attack-and-defend competition and Hacker's Jeopardy.</p>
 
-<p>To register, please go <a href="/register">here</a> and add your team. You
+<p>To register, please go <a href="/Registration">here</a> and add your team. You
     may register with up to three members, or five if two of your team members
     are underclassmen.</p>
 
