--- a/GUMAD_CTF/CTF/templates/CTF/index.html
+++ b/GUMAD_CTF/CTF/templates/CTF/index.html
@@ -14,41 +14,46 @@ including an attack-and-defend competition and Hacker's Jeopardy.</p>
     are underclassmen.</p>
 
 <h2> Preparation </h2>
- It would be wise to be familar with the following technologies when competing:
- <li>
+ <p>It would be wise to be familar with the following technologies when competing:</p>
+ <ul>
 	<li>SSH: Teams will connect to administrate the servers using SSH and log into wargame challenges.</li>
-	<li> Linux: The attack/defend boxes will be running a Ubuntu 16.04 LTS. Teams should be familar with these basic principles:
-	<li> Basic directory navigation </li>
-	<li> Command line text editor (vim, emacs, nano, etc.) Only takes a few minutes to pick one of these classic text editors up! </li> </li>
-	<li> Passion to learn: The most important skill to have! </li>
- </li>
+	<li>Linux: The attack/defend boxes will be running a Ubuntu 16.04 LTS. Teams should be familar with these basic principles:
+	<li>Basic directory navigation </li>
+	<li>Command line text editor (vim, emacs, nano, etc.) Only takes a few minutes to pick one of these classic text editors up! </li> </li>
+	<li>Passion to learn: The most important skill to have! </li>
+</ul>
 
- <p>These skills would be nice...But, do not panic! This is suppossed to be a learning experience for everyone involved! You are not expected to know these going in.</p> 
-  <li>Web Application Development:
-	  <li>NodeJS</li>
-	  <li> Javascript </li>
-	  <li> HTML </li>
-  </li>
-  <li> Python: Version 2.7 </li>
-  <li> C/C++: Use the gcc and g++ compilers in Linux. </li>
-  <li> Assembly: x86 architecture knowlege of general registers, stack and how to use GDB. </li>
-  <li> Cryptography: RSA encryption and basic understanding of a symmetric key cipher. </li>
-  <li> Networking: Be able to read and understanding a pcap file </li>
-  <li> Social Engineering: How are people manipulated? What does a phishing email look like?
-
-
- Types of vulnerabilities that students should watch out for:
- <li> Directory traversal</li>
- <li> SQL Injection </li>
- <li> Buffer overflows</li>
- <li> Race conditions </li>
- <li> Access Control Issues </li>
- <li> Poorly written logic </li>
- <li> Uncontrolled format string </li>
- <li> XML External Entity (XXE) </li>
+<p>These skills would be nice...But, do not panic! This is suppossed to be a learning experience for everyone involved! You are not expected to know these going in.</p>
+<ul>
+    <li>Web Application Development:<ul>
+        <li>NodeJS</li>
+        <li>Javascript </li>
+        <li>HTML</li>
+    </ul></li>
+    <li> Python: Version 2.7 </li>
+    <li> C/C++: Use the gcc and g++ compilers in Linux. </li>
+    <li> Assembly: x86 architecture knowlege of general registers, stack and how to use GDB. </li>
+    <li> Cryptography: RSA encryption and basic understanding of a symmetric key cipher. </li>
+    <li> Networking: Be able to read and understanding a pcap file </li>
+    <li> Social Engineering: How are people manipulated? What does a phishing email look like?
+</ul>
 
 
-OWASP Top 10: https://www.owasp.org/index.php/Top_10-2017_Top_10
-https://en.wikipedia.org/wiki/Category:Computer_security_exploits
+<p>Types of vulnerabilities that students should watch out for:<p>
+<ul>
+    <li> Directory traversal</li>
+    <li> SQL Injection </li>
+    <li> Buffer overflows</li>
+    <li> Race conditions </li>
+    <li> Access Control Issues </li>
+    <li> Poorly written logic </li>
+    <li> Uncontrolled format string </li>
+    <li> XML External Entity (XXE) </li>
+</ul>
 
+<p>Other:</p>
+<ul>
+    <li><a href="https://www.owasp.org/index.php/Top_10-2017_Top_10">OWASP Top 10</a></li>
+    <li><a href="https://en.wikipedia.org/wiki/Category:Computer_security_exploits">More exploits</a></li>
+</ul>
 {% endblock %}
