--- a/GUMAD_CTF/CTF/templates/Registration/index.html
+++ b/GUMAD_CTF/CTF/templates/Registration/index.html
@@ -4,10 +4,11 @@
 
 <h1>Rules and Regulations</h1>
 
+<p>Please read the following, and then go <a href="/Registration/Register">here</a> to register your team. We're excited to have you!</p>
+
 <h3>General</h3>
 <ul>
     <li>Location: Gonzaga University School of Engineering and Applied Science.</li>
-    <!-- <li>Food will hopefully be provided?</li> -->
     <li>Teams of 1-4. If there are two freshman on the team, then a team is allowed
         5 or 6. Freshman are highly encouraged because we want them to come and learn!</li>
     <li>Slack channel for teams to communicate.</li>
@@ -22,9 +23,6 @@
     <li>Will need to keep your service up and running! Points are taken away for down time.</li>
     <li>Flags will rotate on 'ticks', likely to be an hour.</li>
     <li>4 challenges total: 1 flag released per hour.</li>
-</ul>
-
-<ul>
     <li>No external, automated tools besides nmap (I'm talking about using Kali and
     other things). Using google for answers is completely fine though.</li>
     <li>No DOS attacks on machines.</li>
@@ -36,17 +34,19 @@
 <ul>
     <li>Solving a wargame will give x number of points, depending on the difficulty and effort needed
         to solve the challenge. More points given to the first team that solves a challenge (1.5x).</li>
+    <li>For the wargames, sending in write ups of mitigation reports will be extra points, if correct.</li>
+    <li>Attacking another teams box will give the flag for the challenge.</li>
+    <li>Teams will be subtracted points if their service is down/does not work.</li>
+    <li>Defensively, if a malicious payload is seen, then report this to the officials for extra points. Should probably be some sort of cap on this.</li>
+    <li>Harden the system, not about hardening the flag.</li>
+    <li>Some of the wargames will be very weird to judge. So, people (known as judges) will manually have to look at them. This includes the XSS challenge, "I'm in" moment mitgiations and more.</li>
+    <li>Hints are allowed by the people around. However, points will be taken off for this. Want the opportunity for people to have fun and solve challenges though!</li>
+</ul>
 
-For the wargames, sending in write ups of mitigation reports will be extra points, if correct.
-Attacking another teams box will give the flag for the challenge.
-Teams will be subtracted points if their service is down/does not work.
-Defensively, if a malicious payload is seen, then report this to the officials for extra points. Should probably be some sort of cap on this.
-Harden the system, not about hardening the flag.
-Some of the wargames will be very weird to judge. So, people (known as judges) will manually have to look at them. This includes the XSS challenge, "I'm in" moment mitgiations and more.
-Hints are allowed by the people around. However, points will be taken off for this. Want the opportunity for people to have fun and solve challenges though!
-Atmosphere
-
-Should be a fun and learning atomsphere.
-People should be helpful.
+<h5>Atmosphere</h5>
+<ul>
+    <li>Should be a fun and learning atomsphere.</li>
+    <li>People should be helpful.</li>
+</ul>
 
 {% endblock %}
