--- a/GUMAD_CTF/CTF/templates/CTF/base.html
+++ b/GUMAD_CTF/CTF/templates/CTF/base.html
@@ -7,6 +7,8 @@
     <div id="top_bar" style="background-color:black; height:100px">
         <img src="{% static 'CTF/MAD_logo.png' %}" height="100px"/>
     </div>
+    <div id="side_bar" style="width:100px;">
+    </div>
     <div style="width=400px; background-color:white; padding:10px">
     {% block content %}
 
