Registration MVP feature complete, people can register

--- a/GUMAD_CTF/CTF/templates/Registration/registrationForm.html
+++ b/GUMAD_CTF/CTF/templates/Registration/registrationForm.html
@@ -13,21 +13,32 @@
     <!-- {{ memberForm | linebreaks}} -->
     {% for form in members %}
         <h5>Team Member {{ forloop.counter }}</h5>
-        <label for="firstname_{{ forloop.counter }}">First name:</label>
-        <input type="text" name="firstname_{{ forloop.counter }}" id="firstname_{{ forloop.counter }}">
+        {% if forloop.counter <= 3 %}
+            <label for="firstname_{{ forloop.counter }}">First name:</label>
+            <input type="text" name="firstname_{{ forloop.counter }}" id="firstname_{{ forloop.counter }}" required>
 
-        <label for="lastname_{{ forloop.counter }}">Last name:</label>
-        <input type="text" name="lastname_{{ forloop.counter }}" id="lastname_{{ forloop.counter }}">
+            <label for="lastname_{{ forloop.counter }}">Last name:</label>
+            <input type="text" name="lastname_{{ forloop.counter }}" id="lastname_{{ forloop.counter }}" required>
 
-        <label for="email_{{ forloop.counter }}">Email:</label>
-        <input type="text" name="email_{{ forloop.counter }}" id="email_{{ forloop.counter }}">
+            <label for="email_{{ forloop.counter }}">Email:</label>
+            <input type="text" name="email_{{ forloop.counter }}" id="email_{{ forloop.counter }}" required>
+        {% else %}
+            <label for="firstname_{{ forloop.counter }}">First name:</label>
+            <input type="text" name="firstname_{{ forloop.counter }}" id="firstname_{{ forloop.counter }}">
+
+            <label for="lastname_{{ forloop.counter }}">Last name:</label>
+            <input type="text" name="lastname_{{ forloop.counter }}" id="lastname_{{ forloop.counter }}">
+
+            <label for="email_{{ forloop.counter }}">Email:</label>
+            <input type="text" name="email_{{ forloop.counter }}" id="email_{{ forloop.counter }}">
+        {% endif %}
 
         <label for="standing_{{ forloop.counter }}">Class Standing:</label>
         <select name="standing_{{ forloop.counter }}" id="standing_{{ forloop.counter }}">
             <option value="Freshman">Freshman</option>
             <option value="Sophomre">Sophomore</option>
             <option value="Junior">Junior</option>
-            <option value="Senior">Senior</option>
+            <option value="Senior" selected>Senior</option>
         </select>
 
         {% if forloop.counter == 3 %}
