--- a/GUMAD_CTF/CTF/templates/CTF/base.html
+++ b/GUMAD_CTF/CTF/templates/CTF/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE>
 <head>
   <title>CTF | GU MAD</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body style="background-color:gray">
     {% load static %}
