Added gitnore file

--- a/GUMAD_CTF/CTF/templates/Registration/index.html
+++ b/GUMAD_CTF/CTF/templates/Registration/index.html
@@ -9,44 +9,50 @@
 <h3>General</h3>
 <ul>
     <li>Location: Gonzaga University School of Engineering and Applied Science.</li>
-    <li>Teams of 1-4. If there are two freshman on the team, then a team is allowed
-        5 or 6. Freshman are highly encouraged because we want them to come and learn!</li>
+    <li>Teams of 1-3. If there are two freshman on the team, then a team is allowed
+        5 members. Freshman are highly encouraged because we want them to come and learn!</li>
     <li>Slack channel for teams to communicate.</li>
-    <li>Time estimate: 6 hours. We promise this will be a lot of fun, so worth the
-        time!</li>
+    <li>Time estimate: 5 hours. </li>
     <li>There are two types of challenges. Read on!</li>
 </ul>
 
+<h3>Atmosphere</h3>
+<ul>
+    <li>Should be a fun and learning atomsphere.</li>
+    <li>People should be helpful! Judges would <b>love to help you!</b></li>
+</ul>
+
+<h3> 
+    Rules
+</h3>
+<ul>
+    <li>No external, automated tools besides nmap (I'm talking about using Kali and
+        other things). We believe that you are a smart and capable human being! Using google for answers/help is completely fine though.</li>
+        <li>No DOS attacks on machines.</li>
+        <li>Do not attack the scoreboard site.</li>
+        <li>Hints are allowed by the people around. However, points will be taken off for this. Want the opportunity for people to have fun and solve challenges on their own first!</li>
+</ul>
 <h3>Attack/Defense:</h3>
 <ul>
-    <li>This will consist of defending your own box, while trying to exploit others.</li>
-    <li>Will need to keep your service up and running! Points are taken away for down time.</li>
-    <li>Flags will rotate on 'ticks', likely to be an hour.</li>
-    <li>4 challenges total: 1 flag released per hour.</li>
-    <li>No external, automated tools besides nmap (I'm talking about using Kali and
-    other things). Using google for answers is completely fine though.</li>
-    <li>No DOS attacks on machines.</li>
-    <li>Do not attack the scoreboard site.</li>
+    <li>This will consist of defending your own applications, while trying to exploit others.</li>
+    <li>Teams need to keep your service up and running! Points are taken away for down time.</li>
+    <li>Flags will rotate on 'ticks', where flags can be reclaimed.</li>
+    <li>4 challenges total</li>
+    <li>Defensively, if a malicious payload is seen, then report this to the officials for extra points, with a cap of 4 on this.</li>
+    <li>Harden the system, not about hardening the flag. If your team is caught hardening the flag, you will be hit with major deduction.</li>
+
 </ul>
 
 <h3>Wargame and Jeopardy</h3>
 <h5>Scoring</h5>
 <ul>
     <li>Solving a wargame will give x number of points, depending on the difficulty and effort needed
-        to solve the challenge. More points given to the first team that solves a challenge (1.5x).</li>
+        to solve the challenge.</li>
     <li>For the wargames, sending in write ups of mitigation reports will be extra points, if correct.</li>
-    <li>Attacking another teams box will give the flag for the challenge.</li>
-    <li>Teams will be subtracted points if their service is down/does not work.</li>
-    <li>Defensively, if a malicious payload is seen, then report this to the officials for extra points. Should probably be some sort of cap on this.</li>
-    <li>Harden the system, not about hardening the flag.</li>
-    <li>Some of the wargames will be very weird to judge. So, people (known as judges) will manually have to look at them. This includes the XSS challenge, "I'm in" moment mitgiations and more.</li>
-    <li>Hints are allowed by the people around. However, points will be taken off for this. Want the opportunity for people to have fun and solve challenges though!</li>
+    <li>A few of the wargames will be very hard to automate. So, people (known as judges) will manually have to look at them. This includes the XSS challenge, "I'm in" moment mitgiations and more.</li>
+
 </ul>
 
-<h5>Atmosphere</h5>
-<ul>
-    <li>Should be a fun and learning atomsphere.</li>
-    <li>People should be helpful.</li>
-</ul>
+
 
 {% endblock %}
