--- a/GUMAD_CTF/CTF/templates/CTF/index.html
+++ b/GUMAD_CTF/CTF/templates/CTF/index.html
@@ -1,15 +1,53 @@
+
 {% extends 'CTF/base.html' %}
 
 {% block content %}
 
 <h1>Welcome to the Spokane Mayor's Cyber Cup 2019!</h1>
+
+<p>
+    The first question is <i> 'what is a Capture the Flag (CTF) competition?' </i> A CTF is a cybersecurity competition with the goal to challenge everyone involved to think about strange and fun problems in interesting ways. Even though the bulk of the challenges tend to be cybersecurity based, other interesting problems come into play, such as stegongraphy, cryptography and social engineering. 
+</p>
+
+<p>
+    The second question is '<i>why should I participate?</i>' There are two main perspectives: cybersecurity is awesome and this looks great for jobs/internships. Cybersecurity has over <b>1.5 million jobs</b> open at the moment! The industry is exciting, important and ever-changing. If you are interested in the industry, CTFs are a wonderful way to get into cybersecurity. Secondly, employeers want somebody who is passionate about what they do, not just someone who wants a paycheck. CTF's are a wonderful way to demonstrate this and look good to potential employeers. If you fall into either of these categories, please give this a chance!
+</p>
+<p>
+    The final question is '<i>who is invited?</i> ' Even though you are probably thinking <i>cyber security is much too difficult for me</i>, 1) cybersecurity is not as hard as you think, 2) this is a learning experience! The goal of the competition is to <b>learn and prosper</b>, not to assemble the greatest hackers of all time. There will be people on staff ready to help all contestants during the competition. We are bringing in security professionals from <b> Risk Lens, Intrinium and the Spokane Security Coliation </b> to come help out during the contest. 
+</p>
+
+<h3>
+Perks
+</h3>
+
+<p>
+Here's a list of perks about the event: 
+<ul>
+
+<li>
+<b>Free food!</b>
+</li>
+<li>
+Security professionals to chat and learn from.
+</li>
+<li>
+This should be a good event to network at if you are looking for jobs or internships. 
+</li>
+<li>
+Fun way to learn about secure software development. 
+</li>
+<li>
+Prizes at the end of the competition. 
+</li>
+</ul>
+</p>
+<h2> The Competition</h2>
 <p>We at Gonzaga University's Makers and Developers (GU MAD) club are super hyped
 that you are interested in computer security and
 contributing to a learning environment that will benefit us all. It gives
-us great pleasure to be hosting this event! We've prepared a variety of challenges,
-including an attack-and-defend competition and Hacker's Jeopardy.</p>
+us great pleasure to be hosting this event! We've prepared a variety of challenges with both an attack-and-defend style and classic jeopardy style.</p>
 
-<p>To register, please go <a href="/Registration">here</a> and add your team. You
+<p>To <b> register</b>, please go <a href="/Registration">here</a> and add your team. You
     may register with up to three members, or five if two of your team members
     are underclassmen.</p>
 
@@ -20,6 +58,7 @@ including an attack-and-defend competition and Hacker's Jeopardy.</p>
 	<li>Linux: The attack/defend boxes will be running a Ubuntu 16.04 LTS. Teams should be familar with these basic principles:
 	<li>Basic directory navigation </li>
 	<li>Command line text editor (vim, emacs, nano, etc.) Only takes a few minutes to pick one of these classic text editors up! </li> </li>
+	<li>Search tools, such as awk, grep, etc.
 	<li>Passion to learn: The most important skill to have! </li>
 </ul>
 
@@ -36,6 +75,7 @@ including an attack-and-defend competition and Hacker's Jeopardy.</p>
     <li> Cryptography: RSA encryption and basic understanding of a symmetric key cipher. </li>
     <li> Networking: Be able to read and understanding a pcap file </li>
     <li> Social Engineering: How are people manipulated? What does a phishing email look like?
+    <li> Ability to read Log files </li>
 </ul>
 
 
@@ -48,7 +88,7 @@ including an attack-and-defend competition and Hacker's Jeopardy.</p>
     <li> Access Control Issues </li>
     <li> Poorly written logic </li>
     <li> Uncontrolled format string </li>
-    <li> XML External Entity (XXE) </li>
+    
 </ul>
 
 <p>Other:</p>
