--- a/GUMAD_CTF/CTF/templates/CTF/index.html
+++ b/GUMAD_CTF/CTF/templates/CTF/index.html
@@ -34,7 +34,7 @@ including an attack-and-defend competition and Hacker's Jeopardy.</p>
     <li> C/C++: Use the gcc and g++ compilers in Linux. </li>
     <li> Assembly: x86 architecture knowlege of general registers, stack and how to use GDB. </li>
     <li> Cryptography: RSA encryption and basic understanding of a symmetric key cipher. </li>
-    <li> Networking: Be able to read and understanding a pcap file </li>
+    <li> Networking: Be able to read and understand a pcap file </li>
     <li> Social Engineering: How are people manipulated? What does a phishing email look like?
 </ul>
 
