--- a/GUMAD_CTF/CTF/templates/CTF/base.html
+++ b/GUMAD_CTF/CTF/templates/CTF/base.html
@@ -7,6 +7,8 @@
             position: absolute;
             background-color: white;
             max-width: 900px;
+            min-width: 600px;
+            min-height: 600px;
             margin-left: 160px;
             padding: 10px
         }
@@ -27,8 +29,10 @@
     </div>
     <div id="main_body">
         <div id="side_bar">
+            <a href="/">About</a><br>
             <a href="/Registration/Register">Register</a><br>
-            <a href="/Registration">Rules</a>
+            <a href="/Registration">Rules</a><br>
+            <a href="/Schedule">Schedule</a><br>
         </div>
         <div id="main_content">
         {% block content %}
