Debugging. Fixed a dependency for hashing the passwords, need to test.

--- a/GUMAD_CTF/CTF/templates/Registration/registrationForm.html
+++ b/GUMAD_CTF/CTF/templates/Registration/registrationForm.html
@@ -42,7 +42,7 @@
         <label for="standing_{{ forloop.counter }}">Class Standing:</label>
         <select name="standing_{{ forloop.counter }}" id="standing_{{ forloop.counter }}">
             <option value="Freshman">Freshman</option>
-            <option value="Sophomre">Sophomore</option>
+            <option value="Sophomore">Sophomore</option>
             <option value="Junior">Junior</option>
             <option value="Senior" selected>Senior</option>
         </select>
