--- a/GUMAD_CTF/CTF/templates/CTF/schedule.html
+++ b/GUMAD_CTF/CTF/templates/CTF/schedule.html
@@ -10,6 +10,9 @@
         <th>Start</th>
         <th>End</th>
     </tr>
+    <tr>
+        To be posted later. Competition check-in will be around 9:30-10. Closing ceremonies at 5:30 or 6.
+    </tr>
 </table>
 
 <style>
