--- a/GUMAD_CTF/CTF/templates/Registration/index.html
+++ b/GUMAD_CTF/CTF/templates/Registration/index.html
@@ -18,7 +18,7 @@
 
 <h3>Atmosphere</h3>
 <ul>
-    <li>Should be a fun and learning atomsphere.</li>
+    <li>Should be a fun and learning atmosphere.</li>
     <li>People should be helpful! Judges would <b>love to help you!</b></li>
 </ul>
 
@@ -35,7 +35,7 @@
 </ul>
 
 <h3>Attack/Defense:</h3>
-<p>Each team will be assigned a server with multiple <b>services</b> designed spefifically insecure for the contest. The explitation of these services can lead hackers to do malicious things on the server. The goal is to patch(fix) your own services while exploiting the other teams applications. Teams will have complete access to the complete source code, as well as documentation on the service. Furthermore, startup, shutdown and reset scripts will be provided. At the start of the contest, every team will have the exact same services, with the same vulnerabilites present. </p>
+<p>Each team will be assigned a server with multiple <b>services</b> designed specifically  insecure for the contest. The exploitation of these services can lead hackers to do malicious things on the server. The goal is to patch(fix) your own services while exploiting the other teams applications. Teams will have complete access to the complete source code, as well as documentation on the service. Furthermore, startup, shutdown and reset scripts will be provided. At the start of the contest, every team will have the exact same services, with the same vulnerabilities present. </p>
 
 <p>
     These services will be released once per hour at the beginning of the second hour of the contest.
@@ -67,7 +67,7 @@ There are three main ways of scoring:
 
 <h3>Wargame and Jeopardy</h3>
 <p>
-    In jeopardy there are several categories where you pick a question, then attempt to answer it. The same goes with jeopardy CTF, with the only difference being that the questions are  challenges of some kind, where the answer is the flag. The current categories are Software(Web/Native),  Log Analysis/Stegangraphy, Cryptography, Social Engineering and Miscellaneous.
+    In jeopardy there are several categories where you pick a question, then attempt to answer it. The same goes with jeopardy CTF, with the only difference being that the questions are  challenges of some kind, where the answer is the flag. The current categories are Software(Web/Native),  Log Analysis/Steganography, Cryptography, Social Engineering and Miscellaneous.
 </p>
 
 <h3>Scoring</h3>
@@ -75,10 +75,10 @@ There are three main ways of scoring:
     <li>Solving a wargame will give x number of points, depending on the difficulty and effort needed
         to solve the challenge.</li>
     <li>
-        A few of the wargames will be very hard to automate. So, people (known as judges) will manually have to look at them. This includes the XSS challenge, "I'm in" moment mitgiations and more.
+        A few of the wargames will be very hard to automate. So, people (known as judges) will manually have to look at them. This includes the XSS challenge and a few others. 
     </li>
     <li>
-        To recieve the points, go to the challenge turn-in and submit the flag.
+        To receive the points, go to the challenge turn-in and submit the flag.
     </li>
 
 </ul>
